--- a/HelpdeskKit/Views/InputDialog.xaml
+++ b/HelpdeskKit/Views/InputDialog.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="HelpdeskKit.Dialogs.InputDialog"
+﻿<UserControl x:Class="HelpdeskKit.Views.InputDialog"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HelpdeskKit.Dialogs"
+        xmlns:local="clr-namespace:HelpdeskKit.Views"
         mc:Ignorable="d"
-        Height="100" Width="300"
+        Height="100" Width="230"
         TextElement.Foreground="{StaticResource MaterialDesignBody}"
         Background="{StaticResource MaterialDesignPaper}"
         TextElement.FontWeight="Normal"
@@ -26,7 +26,7 @@
                  materialDesign:HintAssist.HintOpacity="0.2"
                  Width="160" Height="40"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                 Margin="5"
+                 Margin="10"
                  Padding="0">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding OkCommand}"
