--- a/HelpdeskKit/Views/LoginDialog.xaml
+++ b/HelpdeskKit/Views/LoginDialog.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HelpdeskKit.Dialogs.LoginDialog"
+﻿<UserControl x:Class="HelpdeskKit.Views.LoginDialog"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -20,7 +20,7 @@
                 <Setter Property="materialDesign:HintAssist.HintOpacity" Value="0.2" />
             </Style>
             <Style TargetType="{x:Type Label}">
-                <Setter Property="Margin" Value="5" />
+                <Setter Property="Margin" Value="3" />
                 <Setter Property="Foreground" Value="White" />
             </Style>
             <!--sync border for packicon-->
@@ -77,9 +77,12 @@
                 </TextBox>
             </StackPanel>
         </Label>
+        <TextBlock Text="{Binding LoginStatusMessage}" 
+                   Foreground="#F57C00" 
+                   HorizontalAlignment="Center" 
+                   Margin="5" />
         <Button Width="70" Height="28" Margin="3" FontSize="12" Padding="0" 
-                Command="{Binding LoginCommand}"
-                Style="{StaticResource MaterialDesignFlatButton}">
+                Command="{Binding LoginCommand}">
             <Canvas>
                 <TextBlock Text="Login"
                            Visibility="{Binding IsLoggingIn, Converter={StaticResource rBoolToVisibility}}"
@@ -90,11 +93,11 @@
                              VerticalAlignment="Center"
                              HorizontalAlignment="Center"
                              Visibility="{Binding IsLoggingIn, Converter={StaticResource BoolToVisibility}}"
-                             Foreground="#FF9800" 
+                             Foreground="{StaticResource PrimaryHueDarkForegroundBrush}" 
                              Canvas.Left="-9"
                              Canvas.Top="-10" />
             </Canvas>
         </Button>
-        <TextBlock Text="{Binding LoginStatusMessage}" Foreground="#F57C00" HorizontalAlignment="Center" Margin="3" />
+        
     </StackPanel>
 </UserControl>
